Adição de condicionais e iformações ao usuario